fix: fixed some build errors

--- a/biome.json
+++ b/biome.json
@@ -18,7 +18,8 @@
       "!**/build",
       "!**/coverage",
       "!**/.next",
-      "!**/storybook-static"
+      "!**/storybook-static",
+      "!**/.docusaurus"
     ]
   },
   "overrides": [
