fix: use tsup without pnpm exec?

--- a/design-toolkit/icons/package.json
+++ b/design-toolkit/icons/package.json
@@ -30,7 +30,7 @@
     "./package.json": "./package.json"
   },
   "scripts": {
-    "build": "pnpm generate:icons && pnpm license && pnpm format && pnpm tsup",
+    "build": "pnpm generate:icons && pnpm license && pnpm format && tsup",
     "generate:icons": "svgr --config-file svgr.config.mjs -- src/svg",
     "format": "pnpm biome format . --write",
     "license": "pnpm zx ../../scripts/license.mjs --files src/icons"
