--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -50,7 +50,7 @@
   },
   "scripts": {
     "bench": "pnpm vitest bench --run --dir src",
-    "build": "pnpm generate && pnpm license && pnpm format && pnpm tsup && pnpm build:css",
+    "build": "pnpm generate && pnpm license && pnpm format && tsup && pnpm build:css",
     "build:css": "pnpm tailwindcss -i ./src/index.css -o ./dist/styles.css",
     "dev": "pnpm tsc --watch",
     "gen:tokens": "pnpm zx scripts/generate-tokens.mjs",
