fix: restore pnpm exec commands

--- a/packages/formatters/package.json
+++ b/packages/formatters/package.json
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "bench": "pnpm vitest bench --run --dir src",
-    "build": "tsup",
+    "build": "pnpm tsup",
     "dev": "pnpm tsc --watch",
     "index": "pnpm zx ../../scripts/indexer.mjs packages/formatters",
     "lint": "pnpm biome lint"
