--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -43,7 +43,7 @@
   },
   "scripts": {
     "bench": "pnpm vitest bench --run --dir src",
-    "build": "rm -rf dist && tsup --config=tsup.css.config.ts && rm -f dist/index.js && tsup",
+    "build": "rm -rf dist && pnpm tsup --config=tsup.css.config.ts && rm -f dist/index.js && pnpm tsup",
     "dev": "pnpm tsc --watch",
     "index": "pnpm zx ../../scripts/indexer.mjs packages/design-system --barrels",
     "lint": "pnpm biome lint",
