--- a/design-toolkit/icons/package.json
+++ b/design-toolkit/icons/package.json
@@ -32,7 +32,7 @@
   "scripts": {
     "build": "pnpm generate:icons && pnpm license && pnpm format && pnpm tsup",
     "generate:icons": "svgr --config-file svgr.config.mjs -- src/svg",
-    "format": "pnpm biome format . --write",
+    "format": "pnpm biome check --linter-enabled=false . --write",
     "license": "pnpm zx ../../scripts/license.mjs --files src/icons"
   },
   "keywords": [],
