--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "audit:docblocks": "pnpm zx scripts/audit-docblocks.mjs",
     "bench": "turbo bench",
     "build": "turbo build",
+    "build:design-preview": "pnpm --filter=@accelint/design-toolkit build-storybook -o ../../design-toolkit/build",
     "changeset": "pnpm exec changeset",
     "changeset:release": "pnpm run build && pnpm exec changeset publish",
     "changeset:version": "pnpm exec changeset version",
@@ -56,7 +57,7 @@
   "bugs": "https://github.com/gohypergiant/standard-toolkit/issues",
   "engines": {
     "node": ">=18",
-    "pnpm": ">=9"
+    "pnpm": ">=10"
   },
   "packageManager": "pnpm@10.9.0",
   "pnpm": {
