--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -158,6 +158,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^2.0.1",
     "tailwindcss": "^4.1.11",
+    "tinyglobby": "^0.2.15",
     "tsup": "^8.5.0",
     "type-fest": "^4.41.0",
     "typescript": "^5.8.3",
