feat: add notice component

--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -8,9 +8,7 @@
     "url": "https://github.com/gohypergiant/standard-toolkit/design-toolkit"
   },
   "type": "module",
-  "files": [
-    "dist/**"
-  ],
+  "files": ["dist/**"],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
@@ -114,7 +112,7 @@
     "@radix-ui/react-avatar": "^1.1.10",
     "@react-aria/dnd": "^3.10.1",
     "@react-aria/interactions": "^3.25.3",
-    "@react-aria/overlays": "^3.29.0",
+    "@react-aria/overlays": "^3.29.1",
     "@react-aria/ssr": "^3.9.10",
     "@react-aria/utils": "^3.30.0",
     "@react-stately/color": "^3.9.0",
