--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -87,6 +87,7 @@
     "@react-stately/utils": "^3.10.8",
     "@react-types/overlays": "^3.9.0",
     "@react-types/shared": "^3.31.0",
+    "@tanstack/react-table": "8.21.3",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
@@ -134,6 +135,7 @@
     "@storybook/theming": "^8.6.14",
     "@tailwindcss/cli": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-table": "8.21.3",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
@@ -172,5 +174,9 @@
   "author": "https://hypergiant.com",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@react-stately/data": "3.13.2",
+    "@tanstack/react-table": "8.21.3"
   }
 }
