fix: Update indexer to point to correct package. :rabbit:

--- a/packages/map-toolkit/package.json
+++ b/packages/map-toolkit/package.json
@@ -33,7 +33,7 @@
     "bench": "pnpm vitest bench --run --dir src",
     "build": "pnpm tsup",
     "dev": "pnpm tsc --watch",
-    "index": "pnpm zx ../../scripts/indexer.mjs packages/bus",
+    "index": "pnpm zx ../../scripts/indexer.mjs packages/map-toolkit",
     "lint": "pnpm biome lint",
     "test": "pnpm vitest --dir=src",
     "test:watch": "pnpm vitest --dir=src --watch"
