--- a/packages/map-toolkit/package.json
+++ b/packages/map-toolkit/package.json
@@ -36,11 +36,14 @@
     "index": "pnpm zx ../../scripts/indexer.mjs packages/map-toolkit",
     "lint": "pnpm biome lint",
     "test": "pnpm vitest --dir=src",
-    "test:watch": "pnpm vitest --dir=src --watch"
+    "test:watch": "pnpm vitest --dir=src --watch",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
     "@accelint/typescript-config": "workspace:*",
     "@accelint/vitest-config": "workspace:*",
+    "@storybook/react-vite": "9.1.8",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
@@ -52,6 +55,10 @@
     "vitest-broadcast-channel-mock": "0.1.0"
   },
   "dependencies": {
+    "@storybook/blocks": "^8.6.14",
+    "deck.gl": "^9.1.14",
+    "react-map-gl": "^8.0.4",
+    "storybook": "^8.6.14",
     "typescript": "^5.8.3"
   },
   "optionalDependencies": {
