--- a/packages/bus/package.json
+++ b/packages/bus/package.json
@@ -52,6 +52,7 @@
     "vitest-broadcast-channel-mock": "0.1.0"
   },
   "dependencies": {
+    "@accelint/core": "workspace:*",
     "typescript": "^5.8.3"
   },
   "optionalDependencies": {
