--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -8,7 +8,9 @@
     "url": "https://github.com/gohypergiant/standard-toolkit/design-toolkit"
   },
   "type": "module",
-  "files": ["dist/**"],
+  "files": [
+    "dist/**"
+  ],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
@@ -115,9 +117,11 @@
     "@react-aria/interactions": "^3.25.3",
     "@react-aria/overlays": "^3.29.1",
     "@react-aria/ssr": "^3.9.10",
+    "@react-aria/toast": "^3.0.7",
     "@react-aria/utils": "^3.30.0",
     "@react-stately/color": "^3.9.0",
     "@react-stately/datepicker": "^3.15.0",
+    "@react-stately/toast": "^3.1.2",
     "@react-stately/utils": "^3.10.8",
     "@react-types/overlays": "^3.9.0",
     "@react-types/shared": "^3.31.0",
