--- a/packages/map-toolkit/package.json
+++ b/packages/map-toolkit/package.json
@@ -13,13 +13,6 @@
   ],
   "types": "./dist/index.d.ts",
   "exports": {
-    ".": {
-      "import": {
-        "types": "./dist/index.d.ts",
-        "default": "./dist/index.js"
-      },
-      "default": "./dist/index.js"
-    },
     "./*": {
       "import": {
         "types": "./dist/*/index.d.ts",
@@ -37,29 +30,53 @@
     "lint": "pnpm biome lint",
     "test": "pnpm vitest --dir=src",
     "test:watch": "pnpm vitest --dir=src --watch",
-    "storybook": "storybook dev -p 6006",
+    "preview": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "devDependencies": {
     "@accelint/typescript-config": "workspace:*",
     "@accelint/vitest-config": "workspace:*",
-    "@storybook/react-vite": "9.1.8",
+    "@storybook/addon-docs": "^9.1.8",
+    "@storybook/addon-onboarding": "^9.1.8",
+    "@storybook/react-vite": "^9.1.8",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@types/react": "^19.1.9",
     "esbuild-fix-imports-plugin": "1.0.21",
+    "msw": "2.11.3",
+    "msw-storybook-addon": "2.0.5",
+    "node-fetch": "2.6.7",
     "react": "^19.0.0",
+    "storybook": "^9.1.8",
     "tsup": "8.5.0",
     "vitest": "2.1.3",
     "vitest-broadcast-channel-mock": "0.1.0"
   },
   "dependencies": {
-    "@storybook/blocks": "^8.6.14",
-    "deck.gl": "^9.1.14",
-    "react-map-gl": "^8.0.4",
-    "storybook": "^8.6.14",
+    "@deck.gl/core": "9.1.14",
+    "@deck.gl/layers": "9.1.14",
+    "@deckgl-fiber-renderer/dom": "1.4.0",
+    "@deckgl-fiber-renderer/shared": "^1.4.0",
+    "@deck.gl/extensions": "^9.1.14",
+    "@deck.gl/geo-layers": "^9.1.14",
+    "@deck.gl/mapbox": "^9.1.14",
+    "@deck.gl/mesh-layers": "^9.1.14",
+    "@deck.gl/widgets": "^9.1.14",
+    "@luma.gl/core": "~9.1.9",
+    "@luma.gl/webgl": "~9.1.9",
+    "@luma.gl/engine": "~9.1.9",
+    "@luma.gl/constants": "~9.1.9",
+    "@luma.gl/shadertools": "~9.1.9",
+    "maplibre-gl": "^5.7.1",
+    "milsymbol": "3.0.2",
     "typescript": "^5.8.3"
+  },
+  "peerDependencies": {
+    "@deck.gl/core": "9.1.14",
+    "@deck.gl/layers": "9.1.14",
+    "@deckgl-fiber-renderer/dom": "1.4.0",
+    "maplibre-gl": "^5.7.1"
   },
   "optionalDependencies": {
     "react": "^19.0.0"
@@ -69,5 +86,10 @@
   "publishConfig": {
     "access": "public"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
+  }
 }
