--- a/packages/map-toolkit/package.json
+++ b/packages/map-toolkit/package.json
@@ -30,15 +30,21 @@
     "lint": "pnpm biome lint",
     "test": "pnpm vitest --dir=src",
     "test:watch": "pnpm vitest --dir=src --watch",
-    "preview": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "preview": "pnpm storybook dev -p 6006",
+    "build-storybook": "pnpm storybook build"
   },
   "devDependencies": {
     "@accelint/typescript-config": "workspace:*",
     "@accelint/vitest-config": "workspace:*",
-    "@storybook/addon-docs": "^9.1.8",
-    "@storybook/addon-onboarding": "^9.1.8",
-    "@storybook/react-vite": "^9.1.8",
+    "@storybook/addon-actions": "^8.6.14",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-storysource": "^8.6.14",
+    "@storybook/addon-themes": "^8.6.14",
+    "@storybook/blocks": "^8.6.14",
+    "@storybook/builder-vite": "^8.6.14",
+    "@storybook/manager-api": "^8.6.14",
+    "@storybook/react": "^8.6.14",
+    "@storybook/react-vite": "^8.6.14",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
@@ -48,7 +54,7 @@
     "msw-storybook-addon": "2.0.5",
     "node-fetch": "2.6.7",
     "react": "^19.0.0",
-    "storybook": "^9.1.8",
+    "storybook": "^8.6.14",
     "tsup": "8.5.0",
     "vitest": "2.1.3",
     "vitest-broadcast-channel-mock": "0.1.0"
