--- a/packages/map-toolkit/package.json
+++ b/packages/map-toolkit/package.json
@@ -34,6 +34,7 @@
     "build-storybook": "pnpm storybook build"
   },
   "devDependencies": {
+    "@accelint/biome-config": "workspace:*",
     "@accelint/typescript-config": "workspace:*",
     "@accelint/vitest-config": "workspace:*",
     "@storybook/addon-actions": "^8.6.14",
@@ -50,8 +51,6 @@
     "@testing-library/react": "^16.3.0",
     "@types/react": "^19.1.9",
     "esbuild-fix-imports-plugin": "1.0.21",
-    "msw": "2.11.3",
-    "msw-storybook-addon": "2.0.5",
     "node-fetch": "2.6.7",
     "react": "^19.0.0",
     "storybook": "^8.6.14",
@@ -79,10 +78,6 @@
     "typescript": "^5.8.3"
   },
   "optionalDependencies": {
-    "@deck.gl/core": "9.1.14",
-    "@deck.gl/layers": "9.1.14",
-    "@deckgl-fiber-renderer/dom": "1.4.0",
-    "maplibre-gl": "^5.7.1",
     "react": "^19.0.0"
   },
   "$schema": "https://json.schemastore.org/package",
@@ -90,10 +85,5 @@
   "publishConfig": {
     "access": "public"
   },
-  "sideEffects": false,
-  "msw": {
-    "workerDirectory": [
-      "public"
-    ]
-  }
+  "sideEffects": false
 }
