--- a/packages/map-toolkit/package.json
+++ b/packages/map-toolkit/package.json
@@ -37,6 +37,20 @@
     "@accelint/biome-config": "workspace:*",
     "@accelint/typescript-config": "workspace:*",
     "@accelint/vitest-config": "workspace:*",
+    "@deck.gl/core": "9.1.14",
+    "@deck.gl/layers": "9.1.14",
+    "@deckgl-fiber-renderer/dom": "1.4.0",
+    "@deckgl-fiber-renderer/shared": "^1.4.0",
+    "@deck.gl/extensions": "^9.1.14",
+    "@deck.gl/geo-layers": "^9.1.14",
+    "@deck.gl/mapbox": "^9.1.14",
+    "@deck.gl/mesh-layers": "^9.1.14",
+    "@deck.gl/widgets": "^9.1.14",
+    "@luma.gl/core": "~9.1.9",
+    "@luma.gl/webgl": "~9.1.9",
+    "@luma.gl/engine": "~9.1.9",
+    "@luma.gl/constants": "~9.1.9",
+    "@luma.gl/shadertools": "~9.1.9",
     "@storybook/addon-actions": "^8.6.14",
     "@storybook/addon-essentials": "^8.6.14",
     "@storybook/addon-storysource": "^8.6.14",
@@ -51,14 +65,17 @@
     "@testing-library/react": "^16.3.0",
     "@types/react": "^19.1.9",
     "esbuild-fix-imports-plugin": "1.0.21",
+    "maplibre-gl": "^5.7.1",
+    "milsymbol": "3.0.2",
     "node-fetch": "2.6.7",
     "react": "^19.0.0",
     "storybook": "^8.6.14",
     "tsup": "8.5.0",
+    "typescript": "^5.8.3",
     "vitest": "2.1.3",
     "vitest-broadcast-channel-mock": "0.1.0"
   },
-  "dependencies": {
+  "optionalDependencies": {
     "@deck.gl/core": "9.1.14",
     "@deck.gl/layers": "9.1.14",
     "@deckgl-fiber-renderer/dom": "1.4.0",
@@ -75,9 +92,7 @@
     "@luma.gl/shadertools": "~9.1.9",
     "maplibre-gl": "^5.7.1",
     "milsymbol": "3.0.2",
-    "typescript": "^5.8.3"
-  },
-  "optionalDependencies": {
+    "typescript": "^5.8.3",
     "react": "^19.0.0"
   },
   "$schema": "https://json.schemastore.org/package",
