feat: open-source deckgl-layer-symbol
Open-source the deckgl-layer-symbol package which adds support
for rendering MIL-STD-2525 symbologies as a Deck.gl layer.
Adds storybook story to demonstrate usage.

--- a/packages/map-toolkit/package.json
+++ b/packages/map-toolkit/package.json
@@ -20,6 +20,13 @@
       },
       "default": "./dist/*/index.js"
     },
+    "./*/fiber": {
+      "import": {
+        "types": "./dist/*/fiber.d.ts",
+        "default": "./dist/*/fiber.js"
+      },
+      "default": "./dist/*/fiber.js"
+    },
     "./package.json": "./package.json"
   },
   "scripts": {
