chore: add type-check script for additional quality control

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,7 @@ jobs:
       - run: pnpm install
       - run: pnpm run build
       - run: pnpm run lint
+      - run: pnpm run type-check
       - run: pnpm run test
       - run: pnpm run lint:fs
 
