Add Clock Component (#501)
* feat: add clock

* feat: add comment

* chore: gen changeset

* feat: move to Components

* chore: add another jsdoc example

* chore: remove unused import

* refactor: memoize formatter

* refactor: changing my mind again about partial options overwrite

* chore: gen changeset

* refactor: yolo

* chore: fix busted test

* feat: add fallback for first frame while time loads

* chore: add additional dep location

* chore: refactor default

* refactor: pass the whole formatter

* chore: remove unused memo

* refactor: 💡 simplify

* feat: add clock docs, zhuzh storybook

* chore: more storybook zhuzh

* chore: use type alias

---------

Co-authored-by: Ray Knight <array.knight+github@gmail.com>

--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -73,6 +73,7 @@
     "@accelint/bus": "^1.3.0",
     "@accelint/core": "^0.4.1",
     "@accelint/icons": "^2.0.3",
+    "@accelint/temporal": "^0.1.0",
     "@fontsource/roboto-flex": "^5.2.6",
     "@fontsource/roboto-mono": "^5.2.6",
     "@internationalized/date": "^3.8.2",
@@ -107,6 +108,7 @@
     "@accelint/bus": "workspace:*",
     "@accelint/core": "workspace:*",
     "@accelint/icons": "workspace:*",
+    "@accelint/temporal": "workspace:*",
     "@accelint/typescript-config": "workspace:*",
     "@accelint/vitest-config": "workspace:*",
     "@fontsource/roboto-flex": "^5.2.6",
