chore: to variable fontsource fonts (#546)
* chore: to variable fontsource fonts

* chore: changeset

--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -74,8 +74,8 @@
     "@accelint/core": "^0.4.1",
     "@accelint/icons": "^2.0.3",
     "@accelint/temporal": "^0.1.0",
-    "@fontsource/roboto-flex": "^5.2.6",
-    "@fontsource/roboto-mono": "^5.2.6",
+    "@fontsource-variable/roboto-flex": "^5.2.8",
+    "@fontsource-variable/roboto-mono": "^5.2.8",
     "@internationalized/date": "^3.8.2",
     "@radix-ui/react-avatar": "^1.1.10",
     "@react-aria/dnd": "^3.10.1",
@@ -111,8 +111,8 @@
     "@accelint/temporal": "workspace:*",
     "@accelint/typescript-config": "workspace:*",
     "@accelint/vitest-config": "workspace:*",
-    "@fontsource/roboto-flex": "^5.2.6",
-    "@fontsource/roboto-mono": "^5.2.6",
+    "@fontsource-variable/roboto-flex": "^5.2.8",
+    "@fontsource-variable/roboto-mono": "^5.2.8",
     "@internationalized/date": "^3.8.2",
     "@radix-ui/react-avatar": "^1.1.10",
     "@react-aria/dnd": "^3.10.1",
