Feat/path 652 catalog script (#519)
* feat: add the initial script for generating the catalog-info.yaml files

* feat: add the other files

* feat: add testing and update the readme file

* feat: update all of the package.json files to work with the tracker

* feat: clean out existing catalog files for regeneration

* feat: initial creation of all catalog-info.yaml files

* feat: update the gitlab release pipeline

* fix: update pnpm-lock.yaml

* chore: changeset

* fix: fix linting errors

* chore: update catalog-info files

* fix: update to address feedback

* fix: update scripts based on feedback

* chore: update changeset

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,7 @@ jobs:
           node-version: ${{ env.RUNNER_NODE_VERSION }}
           cache: "pnpm"
       - run: pnpm install
+      - run: pnpm run constellation-tracker
       - name: Creating .npmrc
         run: |
           cat << EOF > "$HOME/.npmrc"
