fix: pin deck.gl version (#562)
* fix: pin deck.gl version

* chore: adds changeset

--- a/packages/map-toolkit/package.json
+++ b/packages/map-toolkit/package.json
@@ -61,12 +61,12 @@
     "@accelint/typescript-config": "workspace:*",
     "@accelint/vitest-config": "workspace:*",
     "@deck.gl/core": "9.1.14",
-    "@deck.gl/extensions": "^9.1.14",
-    "@deck.gl/geo-layers": "^9.1.14",
+    "@deck.gl/extensions": "9.1.14",
+    "@deck.gl/geo-layers": "9.1.14",
     "@deck.gl/layers": "9.1.14",
-    "@deck.gl/mapbox": "^9.1.14",
-    "@deck.gl/mesh-layers": "^9.1.14",
-    "@deck.gl/widgets": "^9.1.14",
+    "@deck.gl/mapbox": "9.1.14",
+    "@deck.gl/mesh-layers": "9.1.14",
+    "@deck.gl/widgets": "9.1.14",
     "@deckgl-fiber-renderer/dom": "1.4.0",
     "@deckgl-fiber-renderer/shared": "^1.4.0",
     "@deckgl-fiber-renderer/types": "^1.4.0",
@@ -102,12 +102,12 @@
   "optionalDependencies": {
     "@accelint/bus": "workspace:*",
     "@deck.gl/core": "9.1.14",
-    "@deck.gl/extensions": "^9.1.14",
-    "@deck.gl/geo-layers": "^9.1.14",
+    "@deck.gl/extensions": "9.1.14",
+    "@deck.gl/geo-layers": "9.1.14",
     "@deck.gl/layers": "9.1.14",
-    "@deck.gl/mapbox": "^9.1.14",
-    "@deck.gl/mesh-layers": "^9.1.14",
-    "@deck.gl/widgets": "^9.1.14",
+    "@deck.gl/mapbox": "9.1.14",
+    "@deck.gl/mesh-layers": "9.1.14",
+    "@deck.gl/widgets": "9.1.14",
     "@deckgl-fiber-renderer/dom": "1.4.0",
     "@deckgl-fiber-renderer/shared": "^1.4.0",
     "@deckgl-fiber-renderer/types": "^1.4.0",
