--- a/design-toolkit/components/package.json
+++ b/design-toolkit/components/package.json
@@ -103,7 +103,7 @@
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
-    "lodash": "^4.17.21",
+    "radashi": "^12.6.2",
     "react": "^19.0.0",
     "react-aria-components": "^1.12.1",
     "react-dom": "^19.0.0",
@@ -156,7 +156,6 @@
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/lodash": "^4.17.20",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
@@ -166,8 +165,8 @@
     "clsx": "^2.1.1",
     "esbuild-fix-imports-plugin": "^1.0.21",
     "jsdom": "^26.1.0",
-    "lodash": "^4.17.21",
     "postcss": "^8.5.6",
+    "radashi": "^12.6.2",
     "react": "^19.0.0",
     "react-aria-components": "^1.12.1",
     "react-dom": "^19.0.0",
