feat[maptk]: add deckgl-layer-text as default text styling

--- a/packages/map-toolkit/tsconfig.json
+++ b/packages/map-toolkit/tsconfig.json
@@ -6,7 +6,8 @@
     "node_modules",
     "**/*.bench.ts",
     "**/*.test.ts",
-    "**/*.test-d.ts"
+    "**/*.test-d.ts",
+    "**/examples/**"
   ],
   "compilerOptions": {
     "jsx": "react-jsx",
