--- a/packages/map-toolkit/package.json
+++ b/packages/map-toolkit/package.json
@@ -100,6 +100,7 @@
     "storybook": "^8.6.14",
     "tailwindcss": "^4.1.11",
     "tsup": "8.5.0",
+    "type-fest": "^4.41.0",
     "typescript": "5.8.3",
     "vite": "^5.4.9",
     "vitest": "^2.1.9",
